# gresiop

./: README.md  builder_core.py  compiler.py  kernel.py  miner.py  pyproject.toml  registry.py  rule_handlers_std.py  rules_pgr_base.py  runner_core.py  search.py  tiny.py
artifacts/rod/: best_metrics_before.json  meta.json  rules_after.json
data/: best_design_v4_after.json  best_metrics_after.json  golden_results_after.json  meta.json  meta_guard_selection.txt  meta_pgr_changes.txt  meta_report.txt  provenance.txt  provenance_v2.txt  provenance_v4_after.txt  provenance_v4_before.txt  rules_before.json  rules_pgr_after.json  rules_pgr_auto_before.json
docs/: architecture.md
domains/rod/: adapter.py  builder_recipes.py  eval_rod.py  rule_handlers.py  rules_rod.py  run_rod.py
toy/: rules_pgr.py  runner.py  tiny.py
