[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "builder-lab"
version = "0.1.0"
description = "Minimal, domain-agnostic builder/builder-builder framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }

# If you keep everything as plain modules (not a package dir),
# list them here so pip installs them.
# If you turned the repo into a package (e.g., src/builderlab/...), say so below instead.
[tool.setuptools]
packages = [
  # core modules
  "bin",
  "domains",
  "domains.rod",
]

[project.scripts]
# maps to bin/run.py:main
builder-run = "bin.run:main"

